# Internship

./: CMakeLists.txt  README.md  environment.yml
Parallel_mtg/: AUTHORS.rst  HISTORY.rst  MANIFEST.in  README.rst  setup.py
Parallel_mtg/example/notebooks/: Clustering.ipynb
Parallel_mtg/src/openalea/: MTG_clustering.py  __init__.py  parallel_traversal_MTG.py
Parallel_mtg/src/openalea/parallel_mtg/: __init__.py  algo_clustering.py  cluster_plot.py  parallel_traversal_MTG.py  tools.py
Parallel_mtg/src/parallel_mtg.egg-info/: PKG-INFO  SOURCES.txt
Task_1/: CMakeLists.txt  main_MPI.cpp  main_mpi.cpp  main_omp.cpp  main_seq.cpp  main_thread.cpp  main_thread1.cpp  main_thread2.cpp  nogil.cpp  serial.h
Task_1/data/: results.py
Task_1/include/: pyth_object.h  tools.h
Task_1/run/: bench_MPI  bench_MPI_opt  bench_multi  bench_multi_opt  bench_seq  bench_seq_opt  bench_thread  bench_thread_opt  execute.sh  pickle_test  py_version.py
Task_1/src/: CMakeLists.txt  bench_MPI.cpp  bench_MPI_opt.cpp  bench_multi.cpp  bench_multi_opt.cpp  bench_seq.cpp  bench_thread.cpp  bench_thread_opt.cpp  benchmark.cpp  execute.sh  main_MPI.cpp  main_MPI_opt.cpp  main_multi.cpp  main_seq.cpp  main_seq_opt.cpp  main_thread.cpp  main_thread_opt.cpp  pickle_test.cpp
Task_1/test/: CMakeLists.txt  main_MPI.cpp  main_multi.cpp  main_seq.cpp  main_thread.cpp
Task_2/: Plots.ipynb  Queue.py  Untitled.ipynb  clustering.py  clustering_paper.py  clustering_post.py  max_depth.py  mtg.html  paper_implement.py  trav.py  travers_daskr.py
Task_2/.ipynb_checkpoints/: Plots-checkpoint.ipynb  Untitled-checkpoint.ipynb
Task_2/data/results/: Best_Fit_Clustering_bottom_up.npy  Best_Fit_Clustering_level_order_bottom_up.npy  Best_Fit_Clustering_level_order_longest_path.npy  Best_Fit_Clustering_level_order_partition_time.npy  Best_Fit_Clustering_level_order_top_down.npy  Best_Fit_Clustering_longest_path.npy  Best_Fit_Clustering_partition_time.npy  Best_Fit_Clustering_post_order_bottom_up.npy  Best_Fit_Clustering_post_order_longest_path.npy  Best_Fit_Clustering_post_order_partition_time.npy  Best_Fit_Clustering_post_order_top_down.npy  Best_Fit_Clustering_top_down.npy  First_Fit_Clustering_bottom_up.npy  First_Fit_Clustering_longest_path.npy  First_Fit_Clustering_partition_time.npy  First_Fit_Clustering_top_down.npy
Task_2/notebook/: Plots.ipynb
Task_2/notebook/.ipynb_checkpoints/: Plots-checkpoint.ipynb
Task_2/notebooks/: Plots.ipynb
Task_2/src/: Queue.py  algo.py  algo_1.py  algo_bench.py  algo_bench_mtg.py  algo_distributed.py  algo_distributed_mpi.py  algo_distributed_notebook.py  algo_mtg.py  tools.py
Task_2/test/: bottom_up.py  clustering.py  execute.sh  plot_bottom_up_results.py  plot_longest_path_results.py  plot_partition_results.py  plot_top_down_results.py  results_100000.py  results_1000000.py  results_bottom_up.py  results_partition.py  results_top_down.py  test1.py  test_mpi.py  test_mpi_1.py  top_bottom.py
Task_3/: multi_process.py
task1/: CMakeLists.txt  main.cpp  main_mpi.cpp  main_seq.cpp  main_thread.cpp  mpi_tmp.cpp  serial.h  test_mpi.cpp
