cmake_minimum_required(VERSION 2.8.3)




FIND_PACKAGE(PythonInterp 3)
FIND_PACKAGE(PythonLibs 3 REQUIRED)


FIND_PACKAGE(Boost COMPONENTS REQUIRED  python )
FIND_PACKAGE(Boost COMPONENTS mpi )

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})


INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})

ADD_EXECUTABLE(task1 task_1.cpp)
TARGET_LINK_LIBRARIES(task1 ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})


FIND_PACKAGE(MPI REQUIRED)
INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(task1 ${MPI_CXX_LIBRARIES})