cmake_minimum_required(VERSION 2.8.3)

project(task1 CXX)




FIND_PACKAGE(Python3 COMPONENTS Interpreter Development REQUIRED)


FIND_PACKAGE(Boost COMPONENTS REQUIRED python)
FIND_PACKAGE(MPI REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${MPI_INCLUDE_DIRS})


ADD_EXECUTABLE(task1_seq main_seq.cpp)
TARGET_LINK_LIBRARIES(task1_seq Boost::python Python3::Python ) 


ADD_EXECUTABLE(task1_mpi main_mpi.cpp)
TARGET_LINK_LIBRARIES(task1_mpi Boost::python Python3::Python ${MPI_CXX_LIBRARIES}) 
TARGET_COMPILE_OPTIONS(task1_mpi PRIVATE ${MPI_CXX_COMPILE_FLAGS})
TARGET_LINK_LIBRARIES(task1_mpi ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})